fix code box layout and style scrollbars

--- a/.vuepress/theme/styles/code.css
+++ b/.vuepress/theme/styles/code.css
@@ -5,10 +5,21 @@
     }
 
     pre, pre[class*="language-"] {
-        @apply .leading-normal .overflow-auto .my-4 .mx-0 .p-4;
+        @apply .leading-normal .overflow-auto .my-4 .mx-0;
 
         code {
             @apply .text-white .p-0 .bg-transparent .border-0;
+        }
+
+        &::-webkit-scrollbar {
+            @apply .bg-transparent .h-2;
+        }
+        &::-webkit-scrollbar-thumb {
+            @apply .bg-grey-darker .rounded;
+
+            &:hover {
+                @apply .bg-grey-dark;
+            }
         }
     }
 }
@@ -26,7 +37,7 @@ div[class*="language-"] {
     }
 
     pre, pre[class*="language-"] {
-        @apply .bg-transparent .relative .m-0 .mr-4;
+        @apply .bg-transparent .relative .m-0;
         z-index: 1;
     }
 
@@ -77,40 +88,40 @@ div[class*="language-"] {
 
 @each $lang in js,ts,html,md,vue,css,sass,scss,less,stylus,go,java,c,sh,yaml,conf {
     div[class~="language-#{$lang}"]:before {
-        @apply .mr-8;
+        @apply .mr-1;
         content: '#{$lang}';
     }
 }
 
 div[class~="language-javascript"]:before {
-    @apply .mr-8;
+    @apply .mr-1;
     content: "js";
 }
 div[class~="language-typescript"]:before {
-    @apply .mr-8;
+    @apply .mr-1;
     content: "ts";
 }
 div[class~="language-markup"]:before {
-    @apply .mr-8;
+    @apply .mr-1;
     content: "html";
 }
 div[class~="language-markdown"]:before {
-    @apply .mr-8;
+    @apply .mr-1;
     content: "md";
 }
 div[class~="language-json"]:before {
-    @apply .mr-8;
+    @apply .mr-1;
     content: "json";
 }
 div[class~="language-ruby"]:before {
-    @apply .mr-8;
+    @apply .mr-1;
     content: "rb";
 }
 div[class~="language-python"]:before {
-    @apply .mr-8;
+    @apply .mr-1;
     content: "py";
 }
 div[class~="language-bash"]:before {
-    @apply .mr-8;
+    @apply .mr-1;
     content: "sh";
 }
